[package]
name = "webgl"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
rayon = "1.5"
console_error_panic_hook = { version = "0.1.6", optional = true }
cfg-if = "0.1.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console'
]
